# memory-wuxian

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.txt  PROJECT.md  README.ja.md  README.md  README.zh-CN.md  SKILL.md  config.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
agents/: openai.yaml
dashboard/: index.html
memory/: README.md
native-collector/: Cargo.toml
native-collector/src/: main.rs
packaging/macos/: build_pkg.sh
packaging/macos/scripts/: postinstall
packaging/windows/: MemoryWuxian.iss  install.ps1  uninstall.ps1
prompts/: compress.md  heartbeat.md  retrieve.md  summarize.md
references/: decisions.md  implementation.md  schemas.md
schemas/: cloud-ack.schema.json  cloud-configuration.schema.json  delta-manifest.schema.json  device-node.schema.json  federated-index-entry.schema.json  summary-result.schema.json
scripts/: auto_update.py  bootstrap_windows.ps1  build_native_collector.ps1  build_native_collector.sh  conversation_titles.py  install_agent_rules.py  install_auto_update.py  install_cloud_sync.py  install_codex_autosync.py  install_codex_autosync_windows.py  memory_cli.py  memory_cloud_transport.py  memory_dashboard.py  memory_federation.py  platform_lock.py  semantic_backfill.py  semantic_worker.py
templates/: agents-workspace.md  concept.md  level2.md  raw.md  summary.md  timeline.md
tests/: test_auto_update.py  test_cloud_scheduler.py  test_memory_cli.py  test_memory_cloud_transport.py  test_memory_dashboard_federation.py  test_memory_federation.py  test_readme_localizations.py
