[package]
name = "memory-wuxian-collector"
version = "0.6.2"
edition = "2024"
license = "MIT"
description = "Event-driven native Codex conversation collector for Memory Wuxian"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
notify = "8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
walkdir = "2"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
